<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Language Emulator para Android</string>
    <string name="English_app_name">Language Emulator for Android</string>
    <string name="af">Autômato Finito Determinístico</string>
    <string name="English_af">Deterministic Finite Automaton</string>
    <string name="afn">Autômato Finito Não-Determinístico </string>
    <string name="English_afn">Non-Deterministic Finite Automaton</string>
    <string name="afnl">Autômato Finito Não-Determinístico Lambda</string>
    <string name="English_afnl">Lambda Non-Deterministic Finite Automaton</string>
    <string name="ER">Expressão Regular</string>
    <string name="English_ER">Regular Expression</string>
    <string name="gr">Gramática Regular</string>
    <string name="English_gr">Regular Grammar</string>
    <string name="mmoore">Máquina de Moore</string>
    <string name="English_mmoore">Moore Machine</string>
    <string name="mmealy">Máquina de Mealy  </string>
    <string name="English_mmealy">Mealy Machine</string>
    <string name="emulInit">Simular</string>
    <string name="English_emulInit">Simulate</string>
    <string name="criar_estado">Criar Estado</string>
    <string name="English_criar_estado">Create State</string>
    <string name="cancel">Cancelar</string>
    <string name="English_cancel">Cancel</string>
    <string name="setInit">Marcar Inicial</string>
    <string name="English_setInit">Set Inicial</string>
    <string name="unsetInit">Desmarcar Inicial</string>
    <string name="English_unsetInit">Unset Inicial</string>
    <string name="setfim">Marcar Final</string>
    <string name="English_setfim">Set Final</string>
    <string name="unsetfim">Desmarcar Final</string>
    <string name="English_unsetfim">Unset Final</string>
    <string name="statedelete">Apagar Estado</string>
    <string name="English_statedelete">Delete State</string>
    <string name="newTrans">Editar Transição</string>
    <string name="English_newTrans">Edit Transition</string>
    <string name="move">Mover</string>
    <string name="English_move">Move</string>
    <string name="expressao">Entre a Expressão Regular Aqui</string>
    <string name="English_expressao">Enter Regular Expression Here</string>
    <string name="ok">OK</string>
    <string name="English_ok">OK</string>
    <string name="padrao">Entre o Padrão Aqui</string>
    <string name="English_padrao">Enter Pattern Here</string>
    <string name="esquerda">Esquerda</string>
    <string name="English_esquerda">Left</string>
    <string name="direita">Direita</string>
    <string name="English_direita">Right</string>
    <string name="novaRegra">Nova Regra: Esquerda</string>
    <string name="English_novaRegra">New Rule: Left</string>
    <string name="removerRegra">Remover Regra</string>
    <string name="English_removerRegra">Remove Rule</string>
    <string name="avisoGR">Apagar gramática atual e começar outra?</string>
    <string name="English_avisoGR">Erase Current grammar and start another?</string>
    <string name="novaRegraDireita">Nova Regra: Direita</string>
    <string name="English_novaRegraDireita">New Rule: Right</string>
    <string name="aceito">Aceito</string>
    <string name="English_aceito">Accepted</string>
    <string name="recusado">Recusado</string>
    <string name="English_recusado">Refused</string>
    <string name="estadonome">Nome do Estado</string>
    <string name="English_estadonome">Name of the State</string>
    <string name="transtext">separar por virgula</string>
    <string name="English_transtext">separate by comma</string>
    <string name="removeTrans">Remover</string>
    <string name="English_removeTrans">Remove</string>
    <string name="emulfim">Parar</string>
    <string name="English_emulfim">Stop</string>
    <string name="entrada">Entrada</string>
    <string name="English_entrada">Input</string>
    <string name="start">iniciar</string>
    <string name="English_start">Start</string>
    <string name="erexplicacao">Os caracteres especiais reconhecidos são: \'(\' (abre parenteses), \')\' (fecha parenteses), \'+\' (um ou mais), \'*\' (zero ou mais), \'?\' (zero ou um), \'|\' (ou). Aperte OK para continuar.</string>
    <string name="English_erexplicacao">The special characters recognized are: \'(\' (open parentheses), \')\' (close parentheses), \'+\' (one or more), \'*\' (zero or more), \'?\' (zero or one), \'|\' (or). Press OK to continue.</string>
    <string name="grexplicacao">Para criar uma nova gramatica regular esquerda aperte o botão \&quot;Esquerda\&quot;. Para criar uma nova gramatica regular direita aperte o botão \&quot;Direita\&quot;. Aperte OK para continuar.</string>
    <string name="English_grexplicacao">To create a new left regular grammar press the\&quot;Left\&quot; button. To create a new right regular grammar press the \&quot;Right\&quot; button. Press OK to continue.</string>
    <string name="aflikeexplicacao">Para criar um novo estado pressione a tela em qualquer lugar. Para criar uma transição arraste o estado origem ao estado destino. Para iniciar a simulação pressione o botão \&quot;simular\&quot;. Aperte OK para continuar.</string>
    <string name="English_aflikeexplicacao">To create a new state press the screen anywhere. To create a transition drag one state onto another state. To begin simulation press the\&quot;simulate\&quot; button. Press OK to continue.</string>
    <string name="moveRegra">Mover Regra para a primeira posicao</string>
    <string name="English_moveRegra">Move Rule to first position</string>
    <string name="Gerar">Gerar</string>
    <string name="English_Gerar">Generate</string>
    <string name="AFNL">AFNL</string>
    <string name="English_AFNL">LNFA</string>
    <string name="Simplificar">simplificar</string>
    <string name="English_Simplificar">simplify</string>
    <string name="resetar">resetar</string>
    <string name="English_resetar">reset</string>
    <string name="passo">passo</string>
    <string name="English_passo">step</string>
    <string name="AF">AF</string>
    <string name="English_AF">FA</string>
    <string name="GR">GR</string>
    <string name="English_GR">GR</string>
    <string name="er">ER</string>
    <string name="English_er">RE</string>
    <string name="MEALY">MEALY</string>
    <string name="English_MEALY">MEALY</string>
    <string name="MOORE">MOORE</string>
    <string name="English_MOORE">MOORE</string>
    <string name="AFD">AFD</string>
    <string name="English_AFD">DFA</string>
    <string name="AFN">AFN</string>
    <string name="English_AFN">NFA</string>
    <string name="GRE">GRE</string>
    <string name="English_GRE">LRG</string>
    <string name="GRD">GRD</string>
    <string name="English_GRD">RRG</string>
    <string name="Arquivo">Arquivo</string>
    <string name="English_Arquivo">File</string>
    <string name="Salvar">Salvar</string>
    <string name="English_Salvar">Save</string>
    <string name="Salvarcomo">Salvar Como</string>
    <string name="English_Salvarcomo">Save as</string>
    <string name="Abrir">Abrir</string>
    <string name="English_Abrir">Open</string>
    <string name="SalvaEnvia">Salvar e enviar</string>
    <string name="English_SalvaEnvia">Save and Send</string>
    <string name="Lingua">Língua</string>
    <string name="English_Lingua">Language</string>
    <string name="Portugues">Português</string>
    <string name="English">English</string>
    <string name="deleta">Deletar</string>
    <string name="English_deleta">Delete</string>
    <string name="NomeArquivo">Entre o nome do arquivo</string>
    <string name="English_NomeArquivo">Enter File Name</string>
    <string name="sobreescrever">Sobreescrever?</string>
    <string name="English_sobreescrever">Overwrite?</string>
    <string name="English_textoEscolhedor">Send E-Mail Using…</string>
    <string name="textoEscolhedor">Enviar E-Mail Usando…"</string>
    <string name="title_activity_importa_dados">ImportaDadosActivity</string>
    <string name="hello_world">Hello world!</string>

</resources>
