<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/aflikerelativeleiaute"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="edu.poc.languageemulatorandroid.AFLikeActivity$PlaceholderFragment" >
    <LinearLayout
    android:id="@+id/aflikeleiaute10"
    android:layout_width="150dp"
    android:layout_height="50dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="horizontal"
    android:visibility="invisible" >

    <Button
        android:id="@+id/aflikegeragre"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulacentroesquerda"
        android:onClick="geragre"
        android:text="@string/GRE"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeragrd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulacentrodireita"
        android:onClick="geragrd"
        android:text="@string/GRD"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />
    
    <Button
        android:id="@+id/aflikegeragrcancela"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulaextremadireita"
        android:onClick="retorna"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>
    
    <LinearLayout
    android:id="@+id/aflikeleiaute9"
    android:layout_width="200dp"
    android:layout_height="50dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="horizontal"
    android:visibility="invisible" >

    <Button
        android:id="@+id/aflikegeraafd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulacentrodireita"
        android:onClick="geraafd"
        android:text="@string/AFD"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeraafn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulacentroesquerda"
        android:onClick="geraafn"
        android:text="@string/AFN"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeraafnl"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menuinicialbotao"
        android:onClick="geraafnl"
        android:text="@string/AFNL"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeraafcancela"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulaextremadireita"
        android:onClick="retorna"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>
    
<LinearLayout
    android:id="@+id/aflikeleiaute8"
    android:layout_width="300dp"
    android:layout_height="50dp"
    android:layout_alignParentRight="true"
    android:layout_alignParentTop="true"
    android:orientation="horizontal"
    android:visibility="invisible" >

    <Button
        android:id="@+id/aflikegeraaf"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulacentrodireita"
        android:onClick="geraaf"
        android:text="@string/AF"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeraer"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulacentroesquerda"
        android:onClick="geragr"
        android:text="@string/GR"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeragr"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menuinicialbotao"
        android:onClick="geraer"
        android:text="@string/er"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeramealy"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulacentroesquerda"
        android:onClick="geramealy"
        android:text="@string/MEALY"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeramoore"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="50dp"
        android:layout_height="match_parent"
        android:background="@drawable/menuinicialbotao"
        android:onClick="geramoore"
        android:text="@string/MOORE"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

    <Button
        android:id="@+id/aflikegeracancela"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@drawable/menusimulaextremadireita"
        android:onClick="retorna"
        android:text="@string/cancel"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:textColorLink="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>
    
        <LinearLayout
        android:id="@+id/aflikeleiaute11"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:visibility="invisible" >

        <Button
            android:id="@+id/aflikesimplifica"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/menusimulacentroesquerda"
            android:onClick="simplifica"
            android:text="@string/Simplificar"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/aflikegera"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/menusimulacentrodireita"
            android:onClick="menuGerar"
            android:text="@string/Gerar"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp"
            android:visibility="visible" />

        <Button
            android:id="@+id/aflikeiniciaemul"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/botaosimular"
            android:onClick="initEmul"
            android:text="@string/emulInit"
            android:textColor="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp"
            android:visibility="visible" />

    </LinearLayout>

     <LinearLayout
        android:id="@+id/aflikeleiaute6"
        android:layout_width="500dp"
        android:layout_height="50dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="horizontal"
        android:visibility="invisible">

        <TextView
            android:id="@+id/aflikesaida"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/menusimulaextermaesquerda"
            android:gravity="center"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/aflikesubleiauteentrada"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/aflikeentradasimula"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/menusimulacentroesquerda"
            android:ems="10"
            android:hint="@string/entrada"
            android:imeOptions="actionDone"
            android:inputType="textNoSuggestions"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp" >

        </EditText>

        <TextView
            android:id="@+id/aflikeentradaconsumida"
            android:layout_width="match_parent"
            android:layout_height="25dp"
            android:layout_weight="1"
            android:background="@drawable/menusimulacentroesquerda"
            android:ems="10"
            android:hint="@string/entrada"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp" >

        </TextView>
        
    </LinearLayout>
        
        <Button
            android:id="@+id/aflikesimulapasso"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/menuinicialbotao"
            android:onClick="simulaPasso"
            android:text="@string/passo"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp" />

        <Button
            android:id="@+id/aflikesimulatudo"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:background="@drawable/menusimulacentrodireita"
            android:onClick="simula"
            android:text="@string/ok"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp" />

                <Button
                    android:id="@+id/aflikeresetasimul"
                    style="?android:attr/buttonStyleSmall"
                    android:layout_width="50dp"
                    android:layout_height="match_parent"
                    android:background="@drawable/preto"
                    android:onClick="reseta"
                    android:text="@string/resetar"
                    android:textColor="@android:color/white"
                    android:textColorHint="@android:color/white"
                    android:textColorLink="@android:color/white"
                    android:textSize="12sp" />
        
        <Button
            android:id="@+id/aflikeparasimul"
            style="?android:attr/buttonStyleSmall"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/menusimulaextremadireita"
            android:onClick="retorna"
            android:text="@string/emulfim"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white"
            android:textColorLink="@android:color/white"
            android:textSize="12sp" />

    </LinearLayout> 
</RelativeLayout>