<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fundo"
    android:paddingBottom="0dp"
    android:paddingLeft="0dp"
    android:paddingRight="0dp"
    android:paddingTop="0dp"
    tools:context="edu.poc.languageemulatorandroid.MainActivity$PlaceholderFragment" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/mainbutaoafn"
        android:layout_marginLeft="38dp"
        android:layout_toRightOf="@+id/mainbutaoafn"
        android:orientation="vertical" >
    </LinearLayout>

    <Button
        android:id="@+id/mainbutaogr"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/mainbutaoer"
        android:layout_marginTop="5dp"
        android:background="@drawable/menuinicialbotao"
        android:gravity="right|center_vertical"
        android:minHeight="0dp"
        android:minWidth="48dp"
        android:onClick="gotoGR"
        android:text="@string/gr"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mainbutaommoore"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_below="@+id/mainbutaogr"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/linearLayout1"
        android:background="@drawable/menuinicialbotao"
        android:gravity="right|center_vertical"
        android:minHeight="0dp"
        android:onClick="gotoMMOORE"
        android:text="@string/mmoore"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mainbutaommealy"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_below="@+id/mainbutaommoore"
        android:layout_marginTop="5dp"
        android:layout_toLeftOf="@+id/linearLayout1"
        android:background="@drawable/menuinicialbotao"
        android:gravity="right|center_vertical"
        android:minHeight="0dp"
        android:onClick="gotoMMealy"
        android:text="@string/mmealy"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mainbutaoer"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:background="@drawable/menuinicialbotao"
        android:gravity="right|center_vertical"
        android:minHeight="0dp"
        android:onClick="gotoER"
        android:text="@string/ER"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mainbutaoafnl"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_above="@+id/mainbutaoer"
        android:layout_marginBottom="5dp"
        android:layout_toLeftOf="@+id/linearLayout1"
        android:background="@drawable/menuinicialbotao"
        android:gravity="right|center_vertical"
        android:minHeight="0dp"
        android:onClick="gotoAFNL"
        android:text="@string/afnl"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mainbutaoafn"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_above="@+id/mainbutaoafnl"
        android:layout_alignParentLeft="true"
        android:layout_marginBottom="5dp"
        android:background="@drawable/menuinicialbotao"
        android:gravity="right|center_vertical"
        android:minHeight="0dp"
        android:onClick="gotoAFN"
        android:text="@string/afn"
        android:textColor="@android:color/white" />

    <Button
        android:id="@+id/mainbutaoafd"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="300dp"
        android:layout_height="30dp"
        android:layout_alignBottom="@+id/linearLayout1"
        android:layout_marginBottom="5dp"
        android:layout_toLeftOf="@+id/linearLayout1"
        android:background="@drawable/menuinicialbotao"
        android:gravity="right|center_vertical"
        android:minHeight="0dp"
        android:onClick="gotoAFD"
        android:text="@string/af"
        android:textColor="@android:color/white" />

</RelativeLayout>